[gd_scene load_steps=5 format=2]

[ext_resource path="res://CashRegister/CashReg.gd" type="Script" id=1]
[ext_resource path="res://CashRegister/cashregister.png" type="Texture" id=2]
[ext_resource path="res://Misc/arrow.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 57.0894, 51.3791 )

[node name="CashReg" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 1 )

[node name="cashregister" type="Sprite" parent="."]
scale = Vector2( 6, 6 )
texture = ExtResource( 2 )
hframes = 2

[node name="GoodGlow" type="CPUParticles2D" parent="."]
position = Vector2( 0.016, -24 )
emitting = false
amount = 15
emission_shape = 2
emission_rect_extents = Vector2( 12, 1 )
gravity = Vector2( 0, -98 )
scale_amount = 12.0
color = Color( 0.411765, 0.792157, 0.333333, 1 )

[node name="BadGlob" type="CPUParticles2D" parent="."]
position = Vector2( 0.016, -24 )
emitting = false
amount = 15
emission_shape = 2
emission_rect_extents = Vector2( 12, 1 )
gravity = Vector2( 0, -98 )
scale_amount = 12.0
color = Color( 0.74902, 0.231373, 0.203922, 1 )

[node name="GlowTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5
one_shot = true

[node name="arrow" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -50 )
[connection signal="timeout" from="GlowTimer" to="." method="_on_GlowTimer_timeout"]
